fixed the alignment of the tiles on the page. Updated styles with better colors for aesthetics. Changed the index.html to fix the containers.

--- a/styles.css
+++ b/styles.css
@@ -1,236 +1,153 @@
+/* changed some default browser styles */
 * {
-    box-sizing: border-box;
-    padding: 0;
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    font-family: 'Trebuchet MS', 'Arial', 'sans-serif';
+    font-family: 'Trebuchet MS', Arial, sans-serif;
     background-color: #242424;
     color: whitesmoke;
-    line-height: 200%;
-    
+    line-height: 1.6;
 }
 
 .header {
-    font-family: 'Trebuchet MS', 'Arial', 'sans-serif';
     background-color: #5c7c89;
     color: white;
-    height: 125px;
-    padding-top: 40px;
-    padding-left: 25px;
-
-    
+    padding: 20px;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .header h1 {
-    
-    display: inline;
-    font-size: 48px;
+    margin: 0;
+    font-size: 2em;
 }
 
 .header h1 .tyler {
     color: #d9dcd6;
 }
 
-h2 {
-    font-size: 45px;
-    
-}
-
-a {
-    text-decoration: none;
-    margin-inline-start: 15px;
-    
-}
-
-a:link {
-    color: whitesmoke;
-    
-}
-
-a:hover {
-    color: black;
-
-}
-
-a:visited {
- color: grey;
-
-}
-.header nav {
-    
-    margin-top: 25px;
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 25px;
-    
-}
-
 .header nav ul {
-    
-    list-style-type: none;
+    list-style: none;
+    padding: 0;
+    display: flex;
+    gap: 20px;
 }
 
 .header nav ul li {
     display: inline;
-    color: whitesmoke;
 }
 
+.header nav ul li a {
+    color: whitesmoke;
+    text-decoration: none;
+    font-size: 1.2em;
+}
 
+.header nav ul li a:hover {
+    text-decoration: underline;
+}
 
+/* Banner */
 #header-photo {
-   width: 100%;
-   height: auto;
-   
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#header-photo img {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0;
+    padding: 0;
 }
 
 section {
-    display: flex;
-    /* flex-direction: column; */
-    
-    
-}
-
-p {
-    
-    justify-content: center;
-    /* display: contents; */
-    /* border-right: 5px solid; */
-    margin-right: 35px;
-    padding: 30px;
-    flex-basis: 25%;
-}
-
-.section-detail {
-    margin: 20px auto;
-    
-    /* width: 100%; */
-    display: flex;
-    /* flex-direction: row; */
-    justify-content: space-between;
-}
-
-#contact-me ul li {
-    display: inline-flex;
+    padding: 20px;
+    margin: 20px 0;
 }
 
 .section-title {
-    font-size: 48px;
-    display: flex;
-    /* border-right: 5px solid; */
-    /* margin-right: 35px;
-    margin-bottom: 10px; */
-    padding: 30px;
-    /* height: 50px; */
-    line-height: 100%;
+    font-size: 2em;
     color: #5c7c89;
-    /* flex-basis: 25%; */
-
-}
-
-.section-detail {
-    display: flex;
-}
-
-#about-me {
-    display:flex;
-    line-height: 200%;
-    padding-top: 20px;
-    /* flex-direction: row; */
-   
+    margin-bottom: 10px;
 }
 
 .work-container {
     display: flex;
     flex-wrap: wrap;
-    
-    
+    gap: 20px;
 }
 
-#work-container img {
-    border:#5c7c89 solid;
-    width: 700px;
-    height: 400px;
-}
-
-
-
-.content {
-    /* padding-left: 15%;
-    padding-right: 10px; */
+.work-item {
+    flex: 1 1 calc(33.333% - 40px);
+    background: #f4f4f4;
+    border: 1px solid #ccc;
+    margin: 10px;
+    text-align: center;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
-    
+    justify-content: flex-end;
 }
 
-
-#contact-me {
-    display : inline-flex;
-    flex-wrap: wrap;
-    
+.work-item img {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0;
+    padding: 0;
 }
 
-.bottom-left {
-    margin-top: -80px;
+.work-item-title {
     padding: 10px;
-    /* bottom: 16 px; */
-    text-align: left;
-    font-size: 20px;
-    color: whitesmoke;
-    width: 300px;
-    /* left: 2px; */
-    z-index: 1;
-    margin-left: 15px;
     background-color: #5c7c89;
-    
+    color: whitesmoke;
 }
 
-#portfolio-images {
-    height: 200px;
-    width: 300px;
-    display: inline-block;
-    /* margin-bottom: 10px; */
+#contact-me ul {
+    list-style: none;
+    padding: 0;
 }
 
-.mern-container {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-}
-
-.mern-container img {
-    border:#5c7c89 solid;
+#contact-me ul li {
     margin-bottom: 10px;
-    
+    font-size: 1.2em;
 }
 
-
-.mern-container {
-    display: flex;
-    flex-wrap: wrap;
-    
+#contact-me ul li a {
+    color: #5c7c89;
+    text-decoration: none;
 }
 
-
-
-#work {
-    display: flex;
-    
+#contact-me ul li a:hover {
+    text-decoration: underline;
 }
 
-
-.project-container-parent {
-    display: flex;
+footer {
+    background: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 20px;
 }
 
+@media (max-width: 768px) {
+    .header {
+        flex-direction: column;
+    }
 
-.style-container {
-    display: flex;
-  align-items: center;
-  justify-content: center;
+    .header nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .work-item {
+        flex: 1 1 100%;
+    }
 }
-
-  /* <!-- insert #ID for other boxes here to call it separetly  */
